Changes made ClassPathDiscoverer and PathDiscoverer